1997-12-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Don't define if already defined in
	environment.

	* DiGraphNode.m: Switch from #include to #import for tkobjc.h
	and simtools.h.

	* DiGraph.m: Switch from #include to #import for tkobjc.h and
	simtools.h.
	([DiGraph -boingStep]): Initialize n to 0 to avoid warning.
